syntax = "proto3";

package bytebase.store;

import "google/type/expr.proto";
import "store/common.proto";

option go_package = "generated-go/store";

message RolloutPolicy {
  bool automatic = 1;
  repeated string workspace_roles = 2;
  repeated string project_roles = 3;
  // roles/LAST_APPROVER
  // roles/CREATOR
  repeated string issue_roles = 4;
}

message MaskingPolicy {
  repeated MaskData mask_data = 1;
}

message MaskData {
  string schema = 1;
  string table = 2;
  string column = 3;
  MaskingLevel masking_level = 4;
  string full_masking_algorithm_id = 5;
  string partial_masking_algorithm_id = 6;
}

// MaskingExceptionPolicy is the allowlist of users who can access sensitive data.
message MaskingExceptionPolicy {
  message MaskingException {
    enum Action {
      ACTION_UNSPECIFIED = 0;
      QUERY = 1;
      EXPORT = 2;
    }
    // action is the action that the user can access sensitive data.
    Action action = 1;

    // Level is the masking level that the user can access sensitive data.
    MaskingLevel masking_level = 2;

    // Member is the principal who bind to this exception policy instance.
    //
    // Format: users/{userUID} or groups/{group email}
    string member = 4;

    // The condition that is associated with this exception policy instance.
    google.type.Expr condition = 5;
  }

  repeated MaskingException masking_exceptions = 1;
}

message MaskingRulePolicy {
  message MaskingRule {
    // A unique identifier for a node in UUID format.
    string id = 1;

    google.type.Expr condition = 2;

    MaskingLevel masking_level = 3;
  }
  repeated MaskingRule rules = 1;
}

message SQLReviewPolicy {
  string name = 1;
  repeated SQLReviewRule rule_list = 2;
}

message SQLReviewRule {
  string type = 1;
  SQLReviewRuleLevel level = 2;
  string payload = 3;
  Engine engine = 4;
  string comment = 5;
}

enum SQLReviewRuleLevel {
  LEVEL_UNSPECIFIED = 0;
  ERROR = 1;
  WARNING = 2;
  DISABLED = 3;
}

message TagPolicy {
  // tags is the key - value map for resources.
  // for example, the environment resource can have the sql review config tag, like "bb.tag.review_config": "{review config id}"
  map<string, string> tags = 1;
}
