syntax = "proto3";

package bytebase.store;

import "store/policy.proto";

option go_package = "generated-go/store";

message ReviewConfigPayload {
  repeated SQLReviewRule sql_review_rules = 1;
}
